[package]
name = "websockets_async"
version = "0.1.0"
authors = ["dario"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"
futures = "0.3.0"
tungstenite = "0.9.0"
async-tungstenite = "0.2.0"
zmq = "0.9.0"
futures-zmq = "0.5.0"
log = "0.4.0"
async-std = "1.3.0"
env_logger = "0.7.0"
